wier/force-app/main/default/objects/Opportunity_Enrollment__c/Opportunity_Enrollment__c.object-meta.xml
<CustomObject>
    <description>Opportunity Enrollment</description>
    <label>Enrollment</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>