wier/force-app/main/default/objects/Opportunity_Enrollment__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Enrollment</relationshipName>
    <type>Lookup</type>
</CustomField>