wier/force-app/main/default/objects/Opportunity_Enrollment__c/fields/Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number__c</fullName>
    <formula>Lead__r.Lead_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Number</label>
    <type>Text</type>
</CustomField>