wier/force-app/main/default/objects/Opportunity_Enrollment__c/fields/Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner__c</fullName>
    <formula>Lead__r.Owner__r.FirstName+&apos; &apos;+ Lead__r.Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner</label>
    <type>Text</type>
</CustomField>