wier/force-app/main/default/objects/Opportunity_Enrollment__c/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <formula>Text(Lead__r.Type_of_Lead__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Type</label>
    <type>Text</type>
</CustomField>