wier/force-app/main/default/objects/Opportunity_Enrollment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>COpportunity__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Enrollment</relationshipName>
    <type>Lookup</type>
</CustomField>